Fix apbp-offscreen.

--- a/src/sass/player.scss
+++ b/src/sass/player.scss
@@ -224,3 +224,9 @@
     }
   }
 }
+
+.apbp-offscreen {
+  position: absolute!important;
+  height: 1px;
+  width: 1px;
+}
